# django-fish-2020

./: .pre-commit-config.yaml  README.md  pyproject.toml
config/: settings.py
