[tool.poetry]
name = "django_project_2020"
version = "0.1.0"
description = ""
authors = ["Cristian J. Azulay <cjadeveloper@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
